--- a/pom.xml
+++ b/pom.xml
@@ -81,9 +81,6 @@
 
   <developers>
     <developer>
-      <name>Amit Mawkin</name>
-    </developer>
-    <developer>
       <name>Tapabrata Topo Pal</name>
       <email>tapabrata.pal@capitalone.com</email>
       <organization>CapitalOne</organization>
@@ -92,18 +89,6 @@
     <developer>
       <name>Raghavendra Vema</name>
       <email>ragha.vema@capitalone.com</email>
-      <organization>CapitalOne</organization>
-      <organizationUrl>http://www.capitalone.com</organizationUrl>
-    </developer>
-    <developer>
-      <name>Nireesh Thiruveedula</name>
-      <email>nireesh.thiruveedula@capitalone.com</email>
-      <organization>CapitalOne</organization>
-      <organizationUrl>http://www.capitalone.com</organizationUrl>
-    </developer>
-    <developer>
-      <name>Stephen Hughes</name>
-      <email>stephen.hughes@capitalone.com</email>
       <organization>CapitalOne</organization>
       <organizationUrl>http://www.capitalone.com</organizationUrl>
     </developer>
@@ -342,8 +327,8 @@
         <configuration>
           <serverId>ossrh</serverId>
           <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-          <autoReleaseAfterClose>true</autoReleaseAfterClose>
-          <autoDropAfterRelease>true</autoDropAfterRelease>
+          <autoReleaseAfterClose>false</autoReleaseAfterClose>
+          <autoDropAfterRelease>false</autoDropAfterRelease>
           <stagingProfileId>26a9600c05a6d3</stagingProfileId>
         </configuration>
       </plugin>
@@ -696,4 +681,5 @@
       </build>
     </profile>
   </profiles>
+
 </project>
