--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,15 @@
 language: java
 jdk:
-  - openjdk8
-
+- openjdk8
 branches:
   only:
-    - master
-
+  - master
 install: true
-
 before_script:
-  - sudo chown -R $USER:$GROUP $TRAVIS_BUILD_DIR
-
+- sudo chown -R $USER:$GROUP $TRAVIS_BUILD_DIR
 script:
-  - if [ "$TRAVIS_PULL_REQUEST" = "false" ] && [[ "$TRAVIS_BRANCH" = "master" ]]; then cp ./src/devops/release.sh . && ./release.sh; fi
-
+- if [ "$TRAVIS_PULL_REQUEST" = "false" ] && [[ "$TRAVIS_BRANCH" = "master" ]]; then
+  cp ./src/devops/release.sh . && ./release.sh; fi
 notifications:
   webhooks:
     urls: https://webhooks.gitter.im/e/48597b0f75dd571734bc
@@ -22,8 +18,8 @@ notifications:
     on_start: always
   email:
     recipients:
-      - tapabrata.pal@capitalone.com
-      - ragha.vema@capitalone.com
-      - hygieia2@capitalone.com
+    - tapabrata.pal@capitalone.com
+    - ragha.vema@capitalone.com
+    - hygieia2@capitalone.com
     on_success: change
     on_failure: always
