--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ jdk:
 - openjdk11
 branches:
   only:
-  - master
+  - main
 install: true
 before_script:
 - sudo chown -R $USER:$GROUP $TRAVIS_BUILD_DIR
 script:
-- if [ "$TRAVIS_PULL_REQUEST" = "false" ] && [[ "$TRAVIS_BRANCH" = "master" ]]; then
+- if [ "$TRAVIS_PULL_REQUEST" = "false" ] && [[ "$TRAVIS_BRANCH" = "main" ]]; then
   cp ./src/devops/release.sh . && ./release.sh; fi
 notifications:
   webhooks:
